header at mobile, fix arrow btn types, hero at mobile, fix image of me to align correctly

--- a/andrewbe-me/styles/globals.css
+++ b/andrewbe-me/styles/globals.css
@@ -48,6 +48,9 @@ a {
 .home-nav .nav-link a{
   color: white;
 }
+.home-nav .nav-link a:hover::after{
+  background: white;
+}
 .home-nav .nav-link .active{
   background: none;
 }
